# Vue_alpha

./: .gitignore  Readme
backend_service/: app.py  pyproject.toml
backend_service/backend_service/: main.py
backend_service/backend_service/routers/access/: access.py
backend_service/backend_service/routers/general/: general.py
vue_alpha/: README.md  package-lock.json  package.json
